2007-04-22  Peter Brett <peter@peter-b.co.uk>
	* src/o_box_basic.c: Fix some unused variable warnings in libgeda.
	
	  In a recent patch libgd was disabled by default (i.e.  HAS_LIBGD
	  was unset by default).  This exposed some variable declarations
	  which should have been #ifdefed out, but weren't.  Although most
	  were later cleared up, some were missed.
	
2007-04-21  Mike Jarabek  <mjarabek@sentex.ca>

	* src/f_print.c:
	  - Added %%Orientation to DSC block in PS output, fixing SF#1680214.

2007-04-21 Carlos Nieves Onega <cnieves (AT) iespana (DOT) es>

	* src/o_bus_basic.c, src/o_circle_basic.c, src/o_line_basic.c,
	  src/o_pin_basic.c: 
	  - Put unused variables inside #ifdef HAS_LIBGD.
	  - Reverted the patch below. Those variables are used when 
	    compiling with libgd.
	  - Removed unused variables.

	* configure.ac: Don't enable libgd by default.
	  This makes gdk-pixbuf the default library for png output.
	
2007-04-21 Peter Clifton <pcjc2@cam.ac.uk>

	* src/m_basic.c: Fix visibility test in visible(..) for the case when the
	  object completely surrounds the screen clipping region.

	* src/o_circle_basic.c: Tidy up dist() function in o_circle_basic.c
	  to be much more readable.

2007-04-17 Peter Clifton <pcjc2@cam.ac.uk>

	Merge changes from noscreen
	
	2007-16-06 Peter Clifton <pcjc2@cam.ac.uk>

		* src/o_text_basic.c: Use o_text_recalc() to update bounds, as we don't
		  want to duplicate code. Fixes a bug where the bounds were reset manually
		  even with invisible text (causing uninitialised values to be stored in
		  for the object's bounds). Fixed o_text_recalc() to silently return
		  (rather than write uninitialised values) if no bound was found for the
		  text object's prim_objects.

	2007-12-06 Peter Clifton <pcjc2@cam.ac.uk>

		* src/f_image.c, src/f_print.c, src/g_smob.c, src/o_complex_basic.c,
		  src/o_pin_basic.c: Replace incorrect use of world_get_complex_bounds()